--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ''
+#baseurl: ''
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -16,36 +16,37 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: 'America/Indiana/Vevay'
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Pratiksha B. Gaikwad                         # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline:  Quantum Chemistry   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
-
+  2nd Year Graduate Student, Quantum Theory Project, University of Florida. USA.
+  
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://q-pratz-chem.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: q-pratz-chem             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: QPratz_chem          # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Pratiksha B. Gaikwad
+  email: pratiksha.qchem@gmail.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/QPratz_chem       # change to your twitter homepage
+    - https://github.com/q-pratz-chem       # change to your github homepage
+    - https://www.linkedin.com/in/pratiksha-gaikwad
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
