--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,24 +6,30 @@
 -
   type: twitter
   icon: 'fab fa-twitter'
+  
 -
+  type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
+ 
+ -
   type: email
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
--
-  type: rss
-  icon: 'fas fa-rss'
-  noblank: true
+  
 
 # Uncomment and complete the url below to enable more contact options
+# -
+#   type: rss
+#   icon: 'fas fa-rss'
+#   noblank: true
+
+
 # -
 #   type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your mastodon account page
-# -
-#   type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
+
 # -
 #   type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
