Update LinkedIn Link

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -10,7 +10,7 @@
 -
   type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
+  url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
  
  -
   type: email
