--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -19,10 +19,10 @@
   
 
 # Uncomment and complete the url below to enable more contact options
-# -
-#   type: rss
-#   icon: 'fas fa-rss'
-#   noblank: true
+-
+  type: rss
+  icon: 'fas fa-rss'
+  noblank: true
 
 
 # -
