--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -9,8 +9,8 @@
   
 # -
 #   type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
  
  -
   type: email
