--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -8,7 +8,7 @@
   icon: 'fab fa-twitter'
   
 # -
-#   type: linkedin
+  type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
   url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
  
