--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,7 +7,7 @@
   type: twitter
   icon: 'fab fa-twitter'
   
-# -
+ -
   type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
   url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
@@ -19,10 +19,10 @@
   
 
 # Uncomment and complete the url below to enable more contact options
--
-  type: rss
-  icon: 'fas fa-rss'
-  noblank: true
+# -
+#   type: rss
+#   icon: 'fas fa-rss'
+#   noblank: true
 
 
 # -
