--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,10 +7,10 @@
   type: twitter
   icon: 'fab fa-twitter'
   
- -
-  type: linkedin
-  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
+#  -
+#   type: linkedin
+#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+#   url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
  
  -
   type: email
