--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -12,18 +12,18 @@
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
   
--
-  type: rss
-  icon: 'fas fa-rss'
-  noblank: true
+#-
+#  type: rss
+#  icon: 'fas fa-rss'
+#  noblank: true
 
   
 
 # Uncomment and complete the url below to enable more contact options
-#  -
-#   type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
+-
+  type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.linkedin.com/in/pratiksha-gaikwad'     # Fill with your Linkedin homepage
 
 # -
 #   type: mastodon
