Add full_width for layout in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -193,6 +193,11 @@ exclude:
   - node_modules
   - package*.json
 
+
+# Add this at top-level
+layout:
+  full_width: true
+
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
